demo-deploy/ishikari/runtime/k8s/overlays/gke/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ishikari
spec:
  template:
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      tolerations:
        - key: cloud.google.com/gke-spot
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: ishikari
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "308m"
              memory: "2Gi"
